# SkewSat

./: .gitignore  LICENSE  README.md  setup.cfg
src/SkewSat/: SkewSat.py  SkewSatMap.html  satellites.py  testeSkewSat.py
src/SkewSat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
