[metadata]
name = SkewSat
version = 0.0.0.1
author = ['Emanuel Miranda && Humerto Júnior']
author_email = ['emanuelaurelio07_@hotmail.com && hjunior854@gmail.com']
description = Pacote para consultas de cálculos para apontamentos de antenas parabólicas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1bertojunior/SkewSat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
 = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src